Set /Z7 as a default debug info format for release and debug

--- a/builds/msvc/properties/Debug.props
+++ b/builds/msvc/properties/Debug.props
@@ -13,7 +13,7 @@
   <ItemDefinitionGroup>
     <ClCompile>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
-      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <DebugInformationFormat>OldStyle</DebugInformationFormat>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
