Test compilation on x86-linux and x86-windows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,8 +51,10 @@ jobs:
       - name: Compilation with zig
         run: |
           zig build
+          zig build -Dtarget=x86-linux
           zig build -Dtarget=x86_64-linux
           zig build -Dtarget=aarch64-linux
+          zig build -Dtarget=x86-windows
           zig build -Dtarget=x86_64-windows
           zig build -Dtarget=aarch64-windows
           zig build -Dtarget=x86_64-macos
