--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -24,17 +24,17 @@ jobs:
           name: build-win-x86
           path: bin/Win32/Release/v143/dynamic/libsodium.dll
 
-  build-linux-glibc:
+  build-linux-glibc-x64:
     runs-on: ubuntu-latest
     steps:
       - name: Install Zig
-        uses: goto-bus-stop/setup-zig@d866436887ad1b24590684f9d00480376663dd36
+        uses: goto-bus-stop/setup-zig@2a9625d550eefc3a9b1a43d342ad655f563f8241
         with:
           version: master
       - uses: actions/checkout@v4
       - name: build
         run: |
-          zig build -Doptimize=ReleaseFast -Dtarget=x86_64-linux-gnu.2.17 -Dcpu=sandybridge
+          zig build -Doptimize=ReleaseFast -Dtarget=x86_64-linux-gnu.2.17
       - name: tests
         run: cd zig-out/bin && ./run.sh
       - uses: actions/upload-artifact@v3
@@ -46,7 +46,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install Zig
-        uses: goto-bus-stop/setup-zig@d866436887ad1b24590684f9d00480376663dd36
+        uses: goto-bus-stop/setup-zig@2a9625d550eefc3a9b1a43d342ad655f563f8241
         with:
           version: master
       - name: Set up emulation environment
@@ -61,7 +61,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: build
         run: |
-          zig build -Doptimize=ReleaseFast -Dtarget=arm-linux-gnueabihf.2.23 -Dcpu=baseline
+          zig build -Doptimize=ReleaseFast -Dtarget=arm-linux-gnueabihf.2.23
       - name: tests
         run: |
           cd zig-out/bin && env LD_LIBRARY_PATH=/usr/arm-linux-gnueabihf/lib ./run.sh
@@ -74,7 +74,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install Zig
-        uses: goto-bus-stop/setup-zig@d866436887ad1b24590684f9d00480376663dd36
+        uses: goto-bus-stop/setup-zig@2a9625d550eefc3a9b1a43d342ad655f563f8241
         with:
           version: master
       - name: Set up emulation environment
@@ -89,7 +89,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: build
         run: |
-          zig build -Doptimize=ReleaseFast -Dtarget=aarch64-linux-gnu.2.23 -Dcpu=baseline
+          zig build -Doptimize=ReleaseFast -Dtarget=aarch64-linux-gnu.2.23
       - name: tests
         run: |
           cd zig-out/bin && env LD_LIBRARY_PATH=/usr/aarch64-linux-gnu/lib ./run.sh
@@ -98,7 +98,7 @@ jobs:
           name: build-linux-arm64
           path: zig-out/lib/libsodium.so
 
-  build-linux-musl:
+  build-linux-musl-x64:
     runs-on: ubuntu-latest
     container:
       image: alpine:3.13
@@ -108,52 +108,52 @@ jobs:
           apk update
           apk add alpine-sdk ca-certificates xz
       - name: Install Zig
-        uses: goto-bus-stop/setup-zig@d866436887ad1b24590684f9d00480376663dd36
+        uses: goto-bus-stop/setup-zig@2a9625d550eefc3a9b1a43d342ad655f563f8241
         with:
           version: master
       - uses: actions/checkout@v4
       - name: build
         run: |
-          zig build -Doptimize=ReleaseFast -Dtarget=x86_64-linux-musl -Dcpu=sandybridge
+          zig build -Doptimize=ReleaseFast -Dtarget=x86_64-linux-musl
       - name: tests
         run: |
           cd zig-out/bin && ./run.sh
       - uses: actions/upload-artifact@v3
         with:
           name: build-linux-musl-x64
-          path: zig-out/lib/libsodium.so
+          path: zig-out/lib/libsodium.a
 
   build-linux-musl-arm:
     runs-on: ubuntu-latest
     steps:
       - name: Install Zig
-        uses: goto-bus-stop/setup-zig@d866436887ad1b24590684f9d00480376663dd36
+        uses: goto-bus-stop/setup-zig@2a9625d550eefc3a9b1a43d342ad655f563f8241
         with:
           version: master
       - uses: actions/checkout@v4
       - name: build
         run: |
-          zig build -Doptimize=ReleaseFast -Dtarget=arm-linux-musleabihf -Dcpu=baseline
+          zig build -Doptimize=ReleaseFast -Dtarget=arm-linux-musleabihf
       - uses: actions/upload-artifact@v3
         with:
           name: build-linux-musl-arm
-          path: zig-out/lib/libsodium.so
+          path: zig-out/lib/libsodium.a
 
   build-linux-musl-arm64:
     runs-on: ubuntu-latest
     steps:
       - name: Install Zig
-        uses: goto-bus-stop/setup-zig@d866436887ad1b24590684f9d00480376663dd36
+        uses: goto-bus-stop/setup-zig@2a9625d550eefc3a9b1a43d342ad655f563f8241
         with:
           version: master
       - uses: actions/checkout@v4
       - name: build
         run: |
-          zig build -Doptimize=ReleaseFast -Dtarget=aarch64-linux-musl -Dcpu=baseline
+          zig build -Doptimize=ReleaseFast -Dtarget=aarch64-linux-musl
       - uses: actions/upload-artifact@v3
         with:
           name: build-linux-musl-arm64
-          path: zig-out/lib/libsodium.so
+          path: zig-out/lib/libsodium.a
 
   build-apple:
     runs-on: macos-latest
@@ -185,10 +185,10 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build-windows
-      - build-linux-glibc
+      - build-linux-glibc-x64
       - build-linux-glibc-arm
       - build-linux-glibc-arm64
-      - build-linux-musl
+      - build-linux-musl-x64
       - build-linux-musl-arm
       - build-linux-musl-arm64
       - build-apple
