RFC9381 ECVRF implementation (#1188)
* Version 12 of ECVRF

* Incorrect ordering of function inputs

* Identation and notation

* single multiscalar multiplication function

Also changed the style of tests, where the expected output is in vrf.exp rather than in test data (following the style of the hashing).

* declarations inside the if code block

* identation of test_data

* Rename to RFC9381

* Move declarations to top of block

* Check small order over deserialised PK

* Include from_string functions in ed25519_ref10

* Update quirks.h

---------

Co-authored-by: Frank Denis <124872+jedisct1@users.noreply.github.com>

--- a/src/libsodium/Makefile.am
+++ b/src/libsodium/Makefile.am
@@ -99,6 +99,12 @@ libsodium_la_SOURCES = \
 	crypto_stream/xsalsa20/stream_xsalsa20.c \
 	crypto_verify/verify.c \
 	include/sodium/private/asm_cet.h \
+	crypto_vrf/crypto_vrf.c \
+	crypto_vrf/rfc9381/keypair.c \
+	crypto_vrf/rfc9381/prove.c \
+	crypto_vrf/rfc9381/verify.c \
+	crypto_vrf/rfc9381/vrf.c \
+	crypto_vrf/rfc9381/vrf_rfc9381.h \
 	include/sodium/private/chacha20_ietf_ext.h \
 	include/sodium/private/common.h \
 	include/sodium/private/ed25519_ref10.h \
