--- a/test/default/Makefile.am
+++ b/test/default/Makefile.am
@@ -86,7 +86,6 @@ EXTRA_DIST = \
 	stream3.exp \
 	stream4.exp \
 	verify1.exp \
-	vrf.exp \
 	xchacha20.exp
 
 DISTCLEANFILES = \
@@ -172,7 +171,6 @@ DISTCLEANFILES = \
 	stream3.res \
 	stream4.res \
 	verify1.res \
-	vrf.res \
 	xchacha20.res
 
 AM_CPPFLAGS = \
@@ -255,8 +253,7 @@ TESTS_TARGETS = \
 	stream2 \
 	stream3 \
 	stream4 \
-	verify1 \
-	vrf
+	verify1
 
 if !EMSCRIPTEN
 TESTS_TARGETS += \
@@ -513,9 +510,6 @@ stream4_LDADD             = $(TESTS_LDADD)
 
 verify1_SOURCE            = cmptest.h verify1.c
 verify1_LDADD             = $(TESTS_LDADD)
-
-vrf_SOURCE                = cmptest.h vrf.c
-vrf_LDADD                 = $(TESTS_LDADD)
 
 xchacha20_SOURCE          = cmptest.h xchacha20.c
 xchacha20_LDADD           = $(TESTS_LDADD)
