--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -42,6 +42,38 @@ jobs:
           version: master
       - uses: actions/checkout@v4
 
+      - name: Build Android AAR
+        run: sh ./dist-build/android-aar.sh
+
+      - name: Extract android AAR file
+        run: |
+          mkdir -p extracted-aar
+          unzip libsodium-*.aar -d extracted-aar
+            
+      - name: Upload Android arm64
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-android-arm64
+          path: extracted-aar/prefab/modules/sodium/libs/android.arm64-v8a/libsodium.so
+        
+      - name: Upload Android arm
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-android-arm
+          path: extracted-aar/prefab/modules/sodium/libs/android.armeabi-v7a/libsodium.so
+      
+      - name: Upload Android x64
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-android-x64
+          path: extracted-aar/prefab/modules/sodium/libs/android.x86_64/libsodium.so
+      
+      - name: Upload Android x86
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-android-x86
+          path: extracted-aar/prefab/modules/sodium/libs/android.x86/libsodium.so
+
       - name: build-linux-x64
         run: |
           rm -fr zig-out .zig-cache; zig build -Doptimize=ReleaseFast -Dtarget=x86_64-linux-gnu.2.17
@@ -143,7 +175,7 @@ jobs:
       - build-apple
       - build-others
     container:
-      image: mcr.microsoft.com/dotnet/sdk:8.0
+      image: mcr.microsoft.com/dotnet/sdk:6.0
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
@@ -212,9 +244,26 @@ jobs:
         with:
           name: build-maccatalyst
           path: .libsodium-pack/runtimes/maccatalyst-arm64/native/
+      - uses: actions/download-artifact@v4
+        with:
+          name: build-android-arm64
+          path: .libsodium-pack/runtimes/android-arm64/native/
+      - uses: actions/download-artifact@v4
+        with:
+          name: build-android-arm
+          path: .libsodium-pack/runtimes/android-arm/native/
+      - uses: actions/download-artifact@v4
+        with:
+          name: build-android-x64
+          path: .libsodium-pack/runtimes/android-x64/native/
+      - uses: actions/download-artifact@v4
+        with:
+          name: build-android-x86
+          path: .libsodium-pack/runtimes/android-x86/native/
 
       - name: Copy files
         run: cp AUTHORS ChangeLog LICENSE packaging/dotnet-core/libsodium.pkgproj .libsodium-pack/
+
       - name: Create NuGet package
         run: dotnet pack -c Release .libsodium-pack/libsodium.pkgproj
       - uses: actions/upload-artifact@v4
@@ -232,7 +281,7 @@ jobs:
     needs:
       - pack
     container:
-      image: mcr.microsoft.com/dotnet/sdk:8.0
+      image: mcr.microsoft.com/dotnet/sdk:6.0
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
@@ -245,6 +294,7 @@ jobs:
           path: .libsodium-pack/
       - name: dotnet new
         run: dotnet new console -n Tests -o .libsodium-test/
+
       - name: dotnet add package libsodium
         run: dotnet add .libsodium-test/Tests.csproj package libsodium -s $PWD/.libsodium-pack
       - name: Copy files
@@ -261,9 +311,9 @@ jobs:
       - name: Move Build Output
         run: |
           mkdir .libsodium-builds
-          mv .libsodium-test/bin/Release/net8.0/linux-arm/publish .libsodium-builds/linux-arm
-          mv .libsodium-test/bin/Release/net8.0/linux-arm64/publish .libsodium-builds/linux-arm64
-          mv .libsodium-test/bin/Release/net8.0/linux-x64/publish .libsodium-builds/linux-x64
+          mv .libsodium-test/bin/Release/net6.0/linux-arm/publish .libsodium-builds/linux-arm
+          mv .libsodium-test/bin/Release/net6.0/linux-arm64/publish .libsodium-builds/linux-arm64
+          mv .libsodium-test/bin/Release/net6.0/linux-x64/publish .libsodium-builds/linux-x64
       - uses: actions/upload-artifact@v4
         with:
           name: test-builds
@@ -276,7 +326,7 @@ jobs:
     - build-test-binaries
     strategy:
       matrix:
-        arch: [ 'centos:8', 'debian:11' ]
+        arch: [ 'centos:8', 'debian:10' ]
     container:
       image: ${{ matrix.arch }}
     env:
@@ -292,7 +342,7 @@ jobs:
         .libsodium-builds/linux-x64/Tests
 
   run-test-binaries-cross-plat:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs:
       - build-test-binaries
     env:
