--- a/builds/msvc/vs2026/libsodium/libsodium.vcxproj
+++ b/builds/msvc/vs2026/libsodium/libsodium.vcxproj
@@ -103,7 +103,6 @@
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_kx\crypto_kx.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_sign\crypto_sign.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_sign\ed25519\sign_ed25519.c" />
-    <ClCompile Include="..\..\..\..\src\libsodium\crypto_sign\ed25519\ref10\obsolete.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_sign\ed25519\ref10\sign.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_sign\ed25519\ref10\keypair.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_sign\ed25519\ref10\open.c" />
@@ -128,6 +127,14 @@
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_pwhash\scryptsalsa208sha256\pbkdf2-sha256.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_pwhash\scryptsalsa208sha256\nosse\pwhash_scryptsalsa208sha256_nosse.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_pwhash\scryptsalsa208sha256\sse\pwhash_scryptsalsa208sha256_sse.c" />
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_xof\shake128\xof_shake128.c" />
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_xof\shake128\ref\shake128_ref.c" />
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_xof\shake256\xof_shake256.c" />
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_xof\shake256\ref\shake256_ref.c" />
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_xof\turboshake256\xof_turboshake256.c" />
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_xof\turboshake256\ref\turboshake256_ref.c" />
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_xof\turboshake128\xof_turboshake128.c" />
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_xof\turboshake128\ref\turboshake128_ref.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_verify\verify.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_auth\crypto_auth.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_auth\hmacsha512\auth_hmacsha512.c" />
@@ -168,6 +175,10 @@
     <ClCompile Include="..\..\..\..\src\libsodium\sodium\core.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\sodium\utils.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\sodium\version.c" />
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_ipcrypt\ipcrypt_armcrypto.c" />
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_ipcrypt\crypto_ipcrypt.c" />
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_ipcrypt\ipcrypt_soft.c" />
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_ipcrypt\ipcrypt_aesni.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_stream\crypto_stream.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_stream\xchacha20\stream_xchacha20.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_stream\chacha20\stream_chacha20.c" />
@@ -203,6 +214,8 @@
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_aead\aes256gcm\armcrypto\aead_aes256gcm_armcrypto.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_aead\chacha20poly1305\aead_chacha20poly1305.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_secretstream\xchacha20poly1305\secretstream_xchacha20poly1305.c" />
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_core\keccak1600\keccak1600.c" />
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_core\keccak1600\ref\keccak1600_ref.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_core\salsa\ref\core_salsa_ref.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_core\hchacha20\core_hchacha20.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_core\hsalsa20\core_hsalsa20.c" />
@@ -210,6 +223,7 @@
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_core\softaes\softaes.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_core\ed25519\core_ed25519.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_core\ed25519\core_ristretto255.c" />
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_core\ed25519\core_h2c.c" />
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_core\ed25519\ref10\ed25519_ref10.c" />
   </ItemGroup>
   <ItemGroup>
@@ -237,6 +251,7 @@
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_hash_sha256.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_stream.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_auth_hmacsha512.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_xof_shake128.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_aead_xchacha20poly1305.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_stream_salsa20.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_onetimeauth_poly1305.h" />
@@ -252,14 +267,17 @@
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_stream_xchacha20.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_core_salsa208.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_auth_hmacsha512256.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_xof_turboshake128.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_aead_aegis128l.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_aead_chacha20poly1305.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\randombytes_sysrandom.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_xof_turboshake256.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\runtime.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_stream_salsa208.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_aead_aes256gcm.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_core_salsa2012.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_secretbox_xchacha20poly1305.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_core_keccak1600.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_scalarmult.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_pwhash.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_verify_16.h" />
@@ -268,6 +286,7 @@
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_core_hsalsa20.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_kdf_blake2b.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_scalarmult_curve25519.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_xof_shake256.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_shorthash.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_kdf_hkdf_sha256.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_pwhash_argon2id.h" />
@@ -285,11 +304,12 @@
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_secretbox_xsalsa20poly1305.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_secretbox.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_scalarmult_ed25519.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_ipcrypt.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_box_curve25519xsalsa20poly1305.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_generichash_blake2b.h" />
-    <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_sign_edwards25519sha512batch.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\private\ed25519_ref10.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\private\softaes.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\private\quirks.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\private\ed25519_ref10_fe_25_5.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\private\ed25519_ref10_fe_51.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\private\sse2_64_32.h" />
@@ -308,6 +328,10 @@
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_pwhash\argon2\argon2-core.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_pwhash\scryptsalsa208sha256\crypto_scrypt.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_pwhash\scryptsalsa208sha256\pbkdf2-sha256.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_xof\shake128\ref\shake128_ref.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_xof\shake256\ref\shake256_ref.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_xof\turboshake256\ref\turboshake256_ref.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_xof\turboshake128\ref\turboshake128_ref.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_shorthash\siphash24\ref\shorthash_siphash_ref.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_scalarmult\curve25519\scalarmult_curve25519.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_scalarmult\curve25519\sandy2x\consts_namespace.h" />
@@ -323,6 +347,10 @@
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_onetimeauth\poly1305\donna\poly1305_donna64.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_onetimeauth\poly1305\donna\poly1305_donna32.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_onetimeauth\poly1305\sse2\poly1305_sse2.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_ipcrypt\ipcrypt_soft.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_ipcrypt\ipcrypt_aesni.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_ipcrypt\ipcrypt_armcrypto.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_ipcrypt\implementations.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_stream\chacha20\stream_chacha20.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_stream\chacha20\ref\chacha20_ref.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_stream\chacha20\dolbeau\u4.h" />
@@ -339,6 +367,7 @@
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_stream\salsa20\xmm6int\salsa20_xmm6int-avx2.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_stream\salsa20\xmm6int\u8.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_stream\salsa20\xmm6int\salsa20_xmm6int-sse2.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_stream\salsa20\xmm6\salsa20_xmm6-asm_namespace.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_stream\salsa20\xmm6\salsa20_xmm6.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_aead\aegis128l\aegis128l_armcrypto.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_aead\aegis128l\aegis128l_aesni.h" />
@@ -350,6 +379,8 @@
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_aead\aegis256\implementations.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_aead\aegis256\aegis256_armcrypto.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_aead\aegis256\aegis256_soft.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_core\keccak1600\ref\keccak1600_ref.h" />
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_core\ed25519\core_h2c.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_core\ed25519\ref10\fe_25_5\constants.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_core\ed25519\ref10\fe_25_5\fe.h" />
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_core\ed25519\ref10\fe_25_5\base2.h" />
