--- a/builds/msvc/vs2026/libsodium/libsodium.vcxproj.filters
+++ b/builds/msvc/vs2026/libsodium/libsodium.vcxproj.filters
@@ -57,9 +57,6 @@
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_sign\ed25519\sign_ed25519.c">
       <Filter>crypto_sign\ed25519</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\src\libsodium\crypto_sign\ed25519\ref10\obsolete.c">
-      <Filter>crypto_sign\ed25519\ref10</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_sign\ed25519\ref10\sign.c">
       <Filter>crypto_sign\ed25519\ref10</Filter>
     </ClCompile>
@@ -131,6 +128,30 @@
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_pwhash\scryptsalsa208sha256\sse\pwhash_scryptsalsa208sha256_sse.c">
       <Filter>crypto_pwhash\scryptsalsa208sha256\sse</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_xof\shake128\xof_shake128.c">
+      <Filter>crypto_xof\shake128</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_xof\shake128\ref\shake128_ref.c">
+      <Filter>crypto_xof\shake128\ref</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_xof\shake256\xof_shake256.c">
+      <Filter>crypto_xof\shake256</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_xof\shake256\ref\shake256_ref.c">
+      <Filter>crypto_xof\shake256\ref</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_xof\turboshake256\xof_turboshake256.c">
+      <Filter>crypto_xof\turboshake256</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_xof\turboshake256\ref\turboshake256_ref.c">
+      <Filter>crypto_xof\turboshake256\ref</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_xof\turboshake128\xof_turboshake128.c">
+      <Filter>crypto_xof\turboshake128</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_xof\turboshake128\ref\turboshake128_ref.c">
+      <Filter>crypto_xof\turboshake128\ref</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_verify\verify.c">
       <Filter>crypto_verify</Filter>
@@ -252,6 +273,18 @@
     <ClCompile Include="..\..\..\..\src\libsodium\sodium\version.c">
       <Filter>sodium</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_ipcrypt\ipcrypt_armcrypto.c">
+      <Filter>crypto_ipcrypt</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_ipcrypt\crypto_ipcrypt.c">
+      <Filter>crypto_ipcrypt</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_ipcrypt\ipcrypt_soft.c">
+      <Filter>crypto_ipcrypt</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_ipcrypt\ipcrypt_aesni.c">
+      <Filter>crypto_ipcrypt</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_stream\crypto_stream.c">
       <Filter>crypto_stream</Filter>
     </ClCompile>
@@ -357,6 +390,12 @@
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_secretstream\xchacha20poly1305\secretstream_xchacha20poly1305.c">
       <Filter>crypto_secretstream\xchacha20poly1305</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_core\keccak1600\keccak1600.c">
+      <Filter>crypto_core\keccak1600</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_core\keccak1600\ref\keccak1600_ref.c">
+      <Filter>crypto_core\keccak1600\ref</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_core\salsa\ref\core_salsa_ref.c">
       <Filter>crypto_core\salsa\ref</Filter>
     </ClCompile>
@@ -376,6 +415,9 @@
       <Filter>crypto_core\ed25519</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_core\ed25519\core_ristretto255.c">
+      <Filter>crypto_core\ed25519</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\src\libsodium\crypto_core\ed25519\core_h2c.c">
       <Filter>crypto_core\ed25519</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\src\libsodium\crypto_core\ed25519\ref10\ed25519_ref10.c">
@@ -455,6 +497,9 @@
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_auth_hmacsha512.h">
       <Filter>include\sodium</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_xof_shake128.h">
+      <Filter>include\sodium</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_aead_xchacha20poly1305.h">
       <Filter>include\sodium</Filter>
     </ClInclude>
@@ -500,6 +545,9 @@
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_auth_hmacsha512256.h">
       <Filter>include\sodium</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_xof_turboshake128.h">
+      <Filter>include\sodium</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_aead_aegis128l.h">
       <Filter>include\sodium</Filter>
     </ClInclude>
@@ -507,6 +555,9 @@
       <Filter>include\sodium</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\randombytes_sysrandom.h">
+      <Filter>include\sodium</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_xof_turboshake256.h">
       <Filter>include\sodium</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\runtime.h">
@@ -522,6 +573,9 @@
       <Filter>include\sodium</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_secretbox_xchacha20poly1305.h">
+      <Filter>include\sodium</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_core_keccak1600.h">
       <Filter>include\sodium</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_scalarmult.h">
@@ -546,6 +600,9 @@
       <Filter>include\sodium</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_scalarmult_curve25519.h">
+      <Filter>include\sodium</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_xof_shake256.h">
       <Filter>include\sodium</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_shorthash.h">
@@ -599,19 +656,22 @@
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_scalarmult_ed25519.h">
       <Filter>include\sodium</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_ipcrypt.h">
+      <Filter>include\sodium</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_box_curve25519xsalsa20poly1305.h">
       <Filter>include\sodium</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_generichash_blake2b.h">
       <Filter>include\sodium</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\crypto_sign_edwards25519sha512batch.h">
-      <Filter>include\sodium</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\private\ed25519_ref10.h">
       <Filter>include\sodium\private</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\private\softaes.h">
+      <Filter>include\sodium\private</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\private\quirks.h">
       <Filter>include\sodium\private</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\include\sodium\private\ed25519_ref10_fe_25_5.h">
@@ -668,6 +728,18 @@
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_pwhash\scryptsalsa208sha256\pbkdf2-sha256.h">
       <Filter>crypto_pwhash\scryptsalsa208sha256</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_xof\shake128\ref\shake128_ref.h">
+      <Filter>crypto_xof\shake128\ref</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_xof\shake256\ref\shake256_ref.h">
+      <Filter>crypto_xof\shake256\ref</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_xof\turboshake256\ref\turboshake256_ref.h">
+      <Filter>crypto_xof\turboshake256\ref</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_xof\turboshake128\ref\turboshake128_ref.h">
+      <Filter>crypto_xof\turboshake128\ref</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_shorthash\siphash24\ref\shorthash_siphash_ref.h">
       <Filter>crypto_shorthash\siphash24\ref</Filter>
     </ClInclude>
@@ -712,6 +784,18 @@
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_onetimeauth\poly1305\sse2\poly1305_sse2.h">
       <Filter>crypto_onetimeauth\poly1305\sse2</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_ipcrypt\ipcrypt_soft.h">
+      <Filter>crypto_ipcrypt</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_ipcrypt\ipcrypt_aesni.h">
+      <Filter>crypto_ipcrypt</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_ipcrypt\ipcrypt_armcrypto.h">
+      <Filter>crypto_ipcrypt</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_ipcrypt\implementations.h">
+      <Filter>crypto_ipcrypt</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_stream\chacha20\stream_chacha20.h">
       <Filter>crypto_stream\chacha20</Filter>
@@ -761,6 +845,9 @@
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_stream\salsa20\xmm6int\salsa20_xmm6int-sse2.h">
       <Filter>crypto_stream\salsa20\xmm6int</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_stream\salsa20\xmm6\salsa20_xmm6-asm_namespace.h">
+      <Filter>crypto_stream\salsa20\xmm6</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_stream\salsa20\xmm6\salsa20_xmm6.h">
       <Filter>crypto_stream\salsa20\xmm6</Filter>
     </ClInclude>
@@ -793,6 +880,12 @@
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_aead\aegis256\aegis256_soft.h">
       <Filter>crypto_aead\aegis256</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_core\keccak1600\ref\keccak1600_ref.h">
+      <Filter>crypto_core\keccak1600\ref</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\libsodium\crypto_core\ed25519\core_h2c.h">
+      <Filter>crypto_core\ed25519</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\libsodium\crypto_core\ed25519\ref10\fe_25_5\constants.h">
       <Filter>crypto_core\ed25519\ref10\fe_25_5</Filter>
@@ -889,6 +982,12 @@
     <Filter Include="crypto_core\hsalsa20\ref2">
       <UniqueIdentifier>{c6b8e28c-7c54-3af7-bee3-2948ba7b2082}</UniqueIdentifier>
     </Filter>
+    <Filter Include="crypto_core\keccak1600">
+      <UniqueIdentifier>{85c1722f-2d65-30a8-aefb-ebf1cbfe185e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="crypto_core\keccak1600\ref">
+      <UniqueIdentifier>{9462f285-fee0-3779-983b-2811dc621f7d}</UniqueIdentifier>
+    </Filter>
     <Filter Include="crypto_core\salsa">
       <UniqueIdentifier>{4e9a1d6b-ee07-3bbc-ad78-6d0ba0e6d9d3}</UniqueIdentifier>
     </Filter>
@@ -921,6 +1020,9 @@
     </Filter>
     <Filter Include="crypto_hash\sha512\cp">
       <UniqueIdentifier>{f2d6a22b-dd67-3561-90a4-88696169cb7b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="crypto_ipcrypt">
+      <UniqueIdentifier>{5c3b1fe7-203f-36fd-bca5-8d0c4b466d80}</UniqueIdentifier>
     </Filter>
     <Filter Include="crypto_kdf">
       <UniqueIdentifier>{aaf59186-1c0d-33cf-a34d-93e14bb87226}</UniqueIdentifier>
@@ -1062,6 +1164,33 @@
     </Filter>
     <Filter Include="crypto_verify">
       <UniqueIdentifier>{49fb9272-ffe2-3993-b562-b19d5f2c9b40}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="crypto_xof">
+      <UniqueIdentifier>{9d0b6e6c-57a5-33bb-a67c-c1ce5a5e0684}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="crypto_xof\shake128">
+      <UniqueIdentifier>{3311f765-9a5b-3614-a24f-9b97a56240aa}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="crypto_xof\shake128\ref">
+      <UniqueIdentifier>{0b3ce98f-5f0a-3836-a95f-5ebd938a0e15}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="crypto_xof\shake256">
+      <UniqueIdentifier>{d4f668ef-b456-369e-b8bf-b1b6d4e90a6d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="crypto_xof\shake256\ref">
+      <UniqueIdentifier>{c5174d81-c82a-3411-98f7-829a427faddc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="crypto_xof\turboshake128">
+      <UniqueIdentifier>{6ccaee32-fd4e-3b58-be6b-a2866132d22d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="crypto_xof\turboshake128\ref">
+      <UniqueIdentifier>{00e8736b-cf8d-3a60-bfbe-f0c535d45696}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="crypto_xof\turboshake256">
+      <UniqueIdentifier>{8f7b92bd-0b08-3b14-8693-2df66b256d8b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="crypto_xof\turboshake256\ref">
+      <UniqueIdentifier>{bcea4d5e-5593-3465-ac95-2ecd34340ce3}</UniqueIdentifier>
     </Filter>
     <Filter Include="include">
       <UniqueIdentifier>{96da72eb-3aa0-3850-83eb-32788f91e5bd}</UniqueIdentifier>
